--- a/src/components/page/PageMarkdown/syntax-highlight.scss
+++ b/src/components/page/PageMarkdown/syntax-highlight.scss
@@ -1,11 +1,11 @@
 .main-markdown {
   .code-placeholder {
-    color: #d91e18;
+    color: #d73a49; // GitHub
 
     // dark theme
     @media (prefers-color-scheme: dark) {
       & {
-        color: #ffa07a;
+        color: #ff7b72; // GitHub Dark
       }
     }
   }
