capitalize the first letter of sentence if it is mnemonics

--- a/src/components/page/PageMarkdown/syntax-highlight.scss
+++ b/src/components/page/PageMarkdown/syntax-highlight.scss
@@ -17,4 +17,9 @@
     // font-size: 1.1em;
     font-weight: bold;
   }
+
+  li> span:first-child.mnemonics{
+    // capitalize the first letter
+    text-transform: capitalize;
+  }
 }
